// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should render as default 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <main
    class="emotion-0"
  >
    example
  </main>
</div>
`;

exports[`Main should support trait props 1`] = `
.emotion-0 {
  border-color: rgb(204, 136, 0);
  background-color: rgb(255, 170, 0);
  color: rgb(1, 1, 1);
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <main
    class="emotion-0"
    color="primary"
  >
    example
  </main>
</div>
`;
